--- a/user-administration-frontend/src/App.css
+++ b/user-administration-frontend/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+.panel-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
